# utilities

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  allocation_8hpp_source.html  annotated.html  arithmetic_8hpp_source.html  assignment__counter_8hpp_source.html  bit__comparisons_8hpp_source.html  bitset__to__string_8hpp_source.html  cerr__new_8hpp_source.html  classes.html  classutility_1_1Basic__log-members.html  classutility_1_1Basic__log.html  classutility_1_1Memory__view-members.html  classutility_1_1Memory__view.html  classutility_1_1Property-members.html  classutility_1_1Property.html  classutility_1_1SMF__call__counter.html  classutility_1_1SMF__call__counter_3_01T_00_01Is__aggregate_3_01T_01_4_01_4-members.html  classutility_1_1SMF__call__counter_3_01T_00_01Is__aggregate_3_01T_01_4_01_4.html  classutility_1_1SMF__call__counter_3_01T_00_01Is__array_3_01T_01_4_01_4-members.html  classutility_1_1SMF__call__counter_3_01T_00_01Is__array_3_01T_01_4_01_4.html  classutility_1_1SMF__call__counter_3_01T_00_01Is__builtin_3_01T_01_4_01_4-members.html  classutility_1_1SMF__call__counter_3_01T_00_01Is__builtin_3_01T_01_4_01_4.html  classutility_1_1SMF__call__counter_3_01T_00_01Is__class_3_01T_01_4_01_4-members.html  classutility_1_1SMF__call__counter_3_01T_00_01Is__class_3_01T_01_4_01_4.html  classutility_1_1Unsigned__integer-members.html  classutility_1_1Unsigned__integer.html  classutility_1_1detail_1_1Assignment__counter-members.html  classutility_1_1detail_1_1Assignment__counter.html  classutility_1_1detail_1_1Copy__assignment__counter-members.html  classutility_1_1detail_1_1Copy__assignment__counter.html  classutility_1_1detail_1_1Copy__cstr__counter-members.html  classutility_1_1detail_1_1Copy__cstr__counter.html  classutility_1_1detail_1_1Default__cstr__counter-members.html  classutility_1_1detail_1_1Default__cstr__counter.html  classutility_1_1detail_1_1Destructor__counter-members.html  classutility_1_1detail_1_1Destructor__counter.html  classutility_1_1detail_1_1Direct__cstr__counter-members.html  (+76 more)
bench/: CMakeLists.txt  primes.bench.cpp
docs/: Doxyfile
headers/: cerr_new.hpp  clog_new.hpp  compound_trait.hpp  cout_new.hpp  gen_random_data.hpp  integer.hpp  log.hpp  memory_view.hpp  property.hpp  random_value.hpp  signed_integer.hpp  smf_call_counter.hpp  smf_call_counter_aggregate.hpp  smf_call_counter_array.hpp  smf_call_counter_builtin.hpp  smf_call_counter_class.hpp  smf_call_counter_trivial.hpp  strong_guarantee.hpp  thousands_seperator.hpp  trait_conjunction.hpp  type_info.hpp  type_view.hpp  unsigned_integer.hpp
headers/detail/: allocation.hpp  assignment_counter.hpp  constructor_counter.hpp  copy_assignment_counter.hpp  copy_cstr_counter.hpp  default_cstr_counter.hpp  destructor_counter.hpp  direct_cstr_counter.hpp  initializer_list_constructor_counter.hpp  initializer_list_cstr_counter.hpp  move_assignment_counter.hpp  move_cstr_counter.hpp  new_overloads.hpp
headers/detail/usign/: arithmetic.hpp  bitset_to_string.hpp  common.hpp  string_to_bitset.hpp
headers/test/: CMakeLists.txt  compound_trait_test.cpp  signed_integer_test.cpp  smf_call_counter_aggregate_test.cpp  smf_call_counter_array_test.cpp  smf_call_counter_builtin_test.cpp  smf_call_counter_class_test.cpp  smf_call_counter_test.cpp  smf_call_counter_trivial_test.cpp  strong_guarantee_test.cpp  trait_conjunction_test.cpp  trait_disjunction_test.cpp  type_info_test.cpp  unsigned_integer_test.cpp
include/utility/: async_trigger.hpp  bit_array.hpp  cerr_new.hpp  clog_new.hpp  compound_trait.hpp  container_view.hpp  count_t.hpp  cout_new.hpp  curried.hpp  digit_separator.hpp  duration_view.hpp  from_file.hpp  log.hpp  memory_view.hpp  narrow_cast.hpp  primes.hpp  property.hpp  random_value.hpp  smf_call_counter.hpp  strong_guarantee.hpp  thousands_separator.hpp  thousands_seperator.hpp  to_file.hpp  trait_conjunction.hpp  trait_disjunction.hpp  type_info.hpp  type_view.hpp  unsigned_integer.hpp
include/utility/detail/: allocation.hpp  conjunction.hpp  is_std_array.hpp  new_overloads.hpp  time_unit_string.hpp  under_digit_limit.hpp
include/utility/detail/memory_view/: as_base.hpp  bit_at.hpp  format_to_string.hpp  get_base_flag.hpp  memory_view_class.hpp  representation.hpp  to_upper_case.hpp
include/utility/detail/random_value/: gen_value.hpp
include/utility/detail/smf_counter/: assignment_counter.hpp  copy_assignment_counter.hpp  copy_cstr_counter.hpp  default_cstr_counter.hpp  destructor_counter.hpp  direct_cstr_counter.hpp  initializer_list_cstr_counter.hpp  move_assignment_counter.hpp  move_cstr_counter.hpp  smf_call_counter_aggregate.hpp  smf_call_counter_array.hpp  smf_call_counter_builtin.hpp  smf_call_counter_class.hpp  (+1 more)
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  (+5 more)
test/: 4_strings.txt  CMakeLists.txt  async_trigger.test.cpp  bit_array.test.cpp  compound_trait.test.cpp  digit_separator.test.cpp  duration_view.test.cpp  from_file.test.cpp  memory_view.test.cpp  narrow_cast.test.cpp  primes.test.cpp  primes.txt  property.test.cpp  property_test.cpp  random_value.test.cpp  semicolon_g_values.txt  smf_call_counter_aggregate.test.cpp  smf_call_counter_array.test.cpp  smf_call_counter_array_test.cpp  smf_call_counter_builtin.test.cpp  smf_call_counter_class.test.cpp  strong_guarantee.test.cpp  strong_guarantee_test.cpp  thousands_separator.test.cpp  thousands_seperator.test.cpp  to_file.test.cpp  trait_conjunction.test.cpp  trait_conjunction_test.cpp  trait_disjunction.test.cpp  type_info.test.cpp  type_view.test.cpp  unsigned_integer.test.cpp  unsigned_integer_test.cpp  whitespace_values.txt
(+5 files in other folders)
